--- a/templates/home.html
+++ b/templates/home.html
@@ -1,17 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    {% if title %}
-      <title>My website - {{ title }}</title>
-    {% else %}
-      <title>My website</title>
-    {% endif %}
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-  </head>
-  <body>
-    <p class="h4 mb-4">Enter a number between 50 and 200 into the box below</p>
-    <input type="text" id="Number" name="Number" class="form-control mb-4">
-    <button class="btn btn-info btn-block" type="submit">Send</button>
-  </body>
-</html>
+{% extends "layout.html" %}
+{% block content %}
+
+<form class="text-center border border-light p-4" action=http://localhost:5000/results method = "POST">
+<p>50 to 200 <input type = "text" name = "numberToCheck" /></p>
+<p><input type = "submit" value = "submit" /></p>
+
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
+{% endblock %}
